test/zinc_source/compile_errors/rust_interop/04_name_collision.zn
// expected-error: extern rust name 'triple' conflicts with a local declaration
extern rust {
    fn triple(x: i64) -> i64;
}

fn triple(x: i64) {
    return x
}

fn main() {
    print(triple(8))
}
